2008-01-21  Roger Leigh  <rleigh@debian.org>

	* lib/Sbuild.pm: Add isin function.

2008-01-06  Roger Leigh  <rleigh@debian.org>

	* bin/wanna-build: use Sbuild.pm.

	* lib/WannaBuild.pm: Remove (replaced by Sbuild.pm).

	* lib/Sbuild.pm: Add parse_date function (from WannaBuild.pm).

2008-01-06  Roger Leigh  <rleigh@debian.org>

	* Merge buildd repository.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* Version 0.57.0.

	* lib/Sbuild/Makefile.am: Install Sysconfig.pm.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* bin/Makefile.am: Create sbuild-adduser and sbuild-createchroot
	compatibility symlinks to $(sbindir).

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* NEWS: Add changes.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* Makefile.am: Distribute all scripts and files.

2008-01-01  Roger Leigh  <rleigh@debian.org>

	* man/sbuild-stats.1.in: Rename from avg-pkg-build-time.1.in.
	Update with --time option and examples.  Update copyright
	information.

	* man/Makefile.am
	(man_MANS): Rename avg-pkg-build-time.1 to sbuild-stats.1.
	(install-data-hook): Create compatibility symlinks for
	avg-pkg-build-*.

	* configure.ac: Add man/sbuild-stats.1.

	* bin/sbuild-stats: Rename from avg-pkg-build-time.  Use
	Getopt::Long.  Unify modes into $mode, and update database
	location based upon $db, which is also set if invoked through a
	compatibility avg-pkg-build-* symlink.

	* bin/Makefile.am
	(bin_SCRIPTS): Add sbuild-stats.
	(pkglibexec_SCRIPTS): Remove avg-pkg-build-time.
	(install-exec-hook): Symlink avg-pkg-build-time and
	avg-pkg-build-space to sbuild-stats.

2007-12-29  Roger Leigh  <rleigh@debian.org>

	* Document chroot abbreviations.

2007-12-29  Roger Leigh  <rleigh@debian.org>

	* man/Makefile.am: Add new manual page.

	* man/sbuild-abort.1.in: New file.

	* bin/Makefile.am: Use new program name.  Create compatibility
	symlink.  Add --list and --set options.

	* lib/Sbuild/Conf.pm: Add and export $package_checklist.
